# laughing-computing-machine

./: .gitignore  .gitmodules  AUTHORS  README.md  Taskfile.yml  pyproject.toml
examples/: full_ttt_gen.ipynb  ttt_gen.ipynb
src/tickable/: defines.py  evaluatory.py  games.py  genealogers.py  helpers.py  plots.py  resolvers.py  sourcers.py
test/: tickable_mocking.py
